<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/white"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioMaisPopulares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/box"
            android:checked="true"
            android:layoutDirection="rtl"
            android:longClickable="false"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/mais_populares"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioMenosPopulares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/box_sem_topo"
            android:layoutDirection="rtl"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/menos_populares"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioMelhoresAvaliados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/box_sem_topo"
            android:layoutDirection="rtl"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/melhores_avalia_es"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioPioresAvaliados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/box_sem_topo"
            android:layoutDirection="rtl"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/piores_avalia_es"
            android:textSize="15sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/backgroundAdapter"
        android:text="@string/cancelar"
        android:textAllCaps="false"
        android:textSize="16sp" />

</LinearLayout>
